<resources>
    <string name="app_name">Wudhu Yuk</string>
    <string name="exit">Tekan sekali lagi untuk keluar</string>
    <string name="sun">Sun</string>
    <string name="cloud_1">Cloud 1</string>
    <string name="cloud_2">Cloud 2</string>
    <string name="cloud_3">Cloud 3</string>
    <string name="cloud_4">Cloud 4</string>
    <string name="cloud_5">Cloud 5</string>
    <string name="cloud_6">Cloud 6</string>
    <string name="cloud_7">Cloud 7</string>
    <string name="cloud_8">Cloud 8</string>
    <string name="cloud_9">Cloud 9</string>
    <string name="cloud_10">Cloud 10</string>
    <string name="cloud_11">Cloud 11</string>
    <string name="cloud_12">Cloud 12</string>
    <string name="cloud_13">Cloud 13</string>
    <string name="cloud_14">Cloud 14</string>
    <string name="cloud_15">Cloud 15</string>
    <string name="cloud_16">Cloud 16</string>
    <string name="cloud_17">Cloud 17</string>
    <string name="cloud_18">Cloud 18</string>
    <string name="cloud_19">Cloud 19</string>
    <string name="cloud_20">Cloud 20</string>
    <string name="ground">Ground</string>
    <string name="wood_vertical">Wood Vertical</string>
    <string name="belajar">Belajar</string>
    <string name="bermain">Bermain</string>
    <string name="tentang">Tentang</string>
    <string name="pengertian_wudhu">Pengertian Wudhu</string>
    <string name="pengertian_wudhu_field">Wudhu secara Bahasa (etimologi) diambil dari lafal Al-Wadha’ah yang artinya bagus dan bersih. Sedangkan menurut terminologi syara’, wudhu berarti aktivitas bersuci dengan media air yang berhubungan dengan empat anggota tubuh: muka, kedua tangan, kepala, dan kedua kaki.</string>
    <string name="rukun_wudhu">Rukun Wudhu</string>
    <string name="rukun_wudhu_field">1. Niat ketika membasuh wajah\n2. Membasuh wajah\n3. Membasuh kedua tangan hingga siku\n4. Mengusap sebagian kepala\n5. Membasuh kedua kaki hingga mata kaki\n6. Tertib</string>
    <string name="syarat_wudhu">Syarat Sah Wudhu</string>
    <string name="syarat_wudhu_field">1. Beragama Islam\n2. Mumayyiz (bisa membedakan perbuatan yang baik dan buruk)\n3. Tidak dalam keadaan berhadats besar\n4. Menggunakan air yang suci dan menyucikan\n5. Tidak ada sesuatu yang menghalangi sampainya air ke anggota yang dibasuh/diusap saat wudhu\n6. Mengetahui sesuatu yang wajib dan sunnah dalam berwudhu</string>
    <string name="sunnah_wudhu">Sunnah Wudhu</string>
    <string name="sunnah_wudhu_field">1. Menghadap kiblat\n2. Bersiwak\n3. Membaca basmalah\n4. Melafadzkan niat wudhu\n5. Membasuh kedua telapak tangan\n6. Berkumur-kumur\n7. Istinsyaq (Menghirup air ke dalam hidung)\n8. Mengusap seluruh kepala\n9. Mengusap kedua telinga\n10. Menyela jenggot dan jari\n11. Mendahulukan bagian kanan\n12. Membasuh dan mengusap 3 kali\n13. Berdo’a setelah wudhu\n14. Ad-Dalku (Memijit atau menggosok-gosok dengan tangan)\n15. Muwalah (Berwudhu dengan berkesinambungan tanpa dijeda atau tanpa diputus-putus)</string>
    <string name="niat_wudhu">Niat Wudhu</string>
    <string name="niat_wudhu_field">نَوَيْتُ الْوُضُوْءَ لِرَفْعِ الْحَدَثِ الْاَصْغَرِ فَرْضًا لِلّٰهِ تَعَالَى\nArtinya: “Aku niat wudhu untuk menghilangkan hadats kecil, fardhu karena Allah Ta’ala”</string>
    <string name="stop">Berhenti</string>
    <string name="play">Putar</string>
    <string name="tata_cara_wudhu">Tata Cara Wudhu</string>
    <string name="wudhu1">1. Membasuh kedua telapak tangan sampai pergelangan tangan sambil membaca Basmalah</string>
    <string name="wudhu2">2. Membersihkan mulut dan gigi dengan berkumur sebanyak tiga kali</string>
    <string name="wudhu3">3. Membersihkan hidung dengan menghirup air perlahan-lahan sebanyak tiga kali</string>
    <string name="wudhu4">4. Membasuh muka tiga kali disertai niat dimulai dari tempat tumbuhnya rambut kepala hingga bawah dagu dan dari telinga kanan hingga telinga kiri</string>
    <string name="wudhu5">5. Membasuh tangan kanan dari ujung jari sampai batas siku sebanyak tiga kali</string>
    <string name="wudhu6">6. Membasuh tangan kiri dari ujung jari sampai batas siku sebanyak tiga kali</string>
    <string name="wudhu7">7. Membasahi sebagian rambut kepala sebanyak tiga kali</string>
    <string name="wudhu8">8. Membersihkan kedua telinga sebanyak tiga kali</string>
    <string name="wudhu9">9. Membasuh kaki kanan dari ujung jari kaki sampai mata kaki sebanyak tiga kali</string>
    <string name="wudhu10">10. Membasuh kaki kiri dari ujung jari kaki sampai mata kaki sebanyak tiga kali</string>
    <string name="doa_wudhu">Do\'a Setelah Wudhu</string>
    <string name="doa_wudhu_field">اَشْهَدُ اَنْ لاَّاِلَهَ اِلاَّاللّٰهُ وَحْدَهُ لاَشَرِيْكَ لَهُ وَاَشْهَدُ اَنَّ مُحَمَّدًاعَبْدُهُ وَرَسُوْلُهُ. اَللّٰهُمَّ اجْعَلْنِىْ مِنَ التَّوَّابِيْنَ، وَاجْعَلْنِىْ مِنَ الْمُتَطَهِّرِيْنَ، وَجْعَلْنِيْ مِنْ عِبَادِكَ الصَّالِحِيْنُ.\nArtinya: “Aku bersaksi bahwa tiada Tuhan melainkan Allah, tiada sekutu baginya, dan aku bersaksi bahwa Nabi Muhammad itu hamba dan utusanNya. Ya Allah! Jadikanlah aku dari golongan orang-orang yang bertaubat dan jadikanlah aku dari golongan orang-orang yang bersuci dan jadikanlah aku bagian dari hamba-hamba-Mu yang sholeh.”</string>
    <string name="references">Daftar Pustaka</string>
    <string name="references_field"><![CDATA[[1] A. A. M. Azzam dan A. W. S. Hawwaz, Fiqh Ibadah, Jakarta: AMZAH, 2009. \n[2] M. Ajib, Fiqih Wudhu Versi Madzhab Syafi\'iy, Jakarta: Rumah Fiqih Publishing, 2019. \n[3] A. Syah, Aku Pandai Shalat, LAKSANA, 2019. \n[4] M. BK, “Wudhu: Niat, Tata Cara, Doa, dan Keutamaannya,” BedaMedia Group, 21 Agustus 2024. [Online]. Available: https://bersamadakwah.net/wudhu/. [Diakses 18 September 2024].\n[5] Media Edukasi Online, “Niat Wudhu dan Doa Setelah Wudhu,” Media Edukasi Online, 26 Desember 2021. [Online]. Available: https://youtu.be/n8FXYHNEMhE?si=1ZORp6QF6gLykmNt. [Diakses 18 September 2024].\n[6] A. Salman, Buku Tuntunan Ibadah Anak Saleh & Salehah, Jakarta: Anak Kita, 2021. \n[7] Yudi, “Tata Cara Wudhu, Lengkap dengan Bacaan Arab, Latin, Arti, Niat dan Doa Tiap Gerakannya,” Islampos, 22 Juli 2022. [Online]. Available: https://www.islampos.com/tata–cara–wudhu–256664/. [Diakses 18 September 2024].\n[8] A. Hamid, Ansori dan S. A. Farisi, Buku Tuntunan Supermudah & Lengkap Shalat Wajib & Sunnah Sesuai Tuntunan Rasulullah, Jakarta: QultumMedia, 2023. \n[9] D. Kusumawardani, “Makna Wudhu dalam Kehidupan menurut Al–Qur’an dan Hadis,” Jurnal Riset Agama, vol. 1, no. 1, pp. 107–118, 2021.]]></string>
    <string name="batal_wudhu">Hal-Hal Yang Membatalkan Wudhu</string>
    <string name="batal_wudhu_field">1. Keluar sesuatu dari lubang anus dan kemaluan, kecuali air mani\n2. Hilang akal\n3. Bersentuhan kulit laki-laki dan perempuan yang bukan mahramnya\n4. Menyentuh kemaluan dengan telapak tangan</string>
    <string name="wood_horizontal">Wood Horizontal</string>
    <string name="back">Back</string>
    <string name="welcome">Selamat Datang di</string>
    <string name="character">Karakter</string>
    <string name="narration_1">Wah, lihat! Ada apa ini? Kok banyak sekali keran yang menetes di tempat wudhu? Airnya terbuang percuma!\nTeman-teman, sebelum kita sholat, kita harus berwudhu terlebih dahulu. Tapi sayang sekali, kalau keran airnya terus menetes, airnya bisa habis. Padahal air itu sangat penting untuk kita.</string>
    <string name="next">Lanjut ⨠⨠⨠</string>
    <string name="narration_2">Ayo, kita jadi penjaga air yang baik! Tugas kita adalah menutup semua keran yang terbuka agar airnya tidak terbuang sia-sia.\nDi dalam game ini, kalian akan melihat keran-keran yang muncul dan menghilang secara tiba-tiba. Tugas kalian adalah mengetuk keran-keran itu tepat waktu!</string>
    <string name="narration_3">Setiap keran yang berhasil kalian tutup, kalian akan mendapatkan poin. Semakin banyak poin yang kalian dapat, semakin hebat kalian sebagai penjaga air!\nDengan bermain game ini, kalian tidak hanya belajar tentang pentingnya menghemat air, tapi juga melatih kesabaran dan ketelitian.</string>
    <string name="narration_4">Siap untuk menjadi penjaga air yang hebat? Ayo, kita mulai petualangannya! Ketuk keran-keran itu secepat mungkin sebelum menghilang!</string>
    <string name="go">Mainkan ⨠⨠⨠</string>
    <string name="next_stage">Babak Selanjutnya</string>
    <string name="faucet1">Keran 1</string>
    <string name="faucet2">Keran 2</string>
    <string name="faucet3">Keran 3</string>
    <string name="faucet4">Keran 4</string>
    <string name="faucet5">Keran 5</string>
    <string name="faucet6">Keran 6</string>
    <string name="stage_1">Babak 1</string>
    <string name="stage_2">Babak 2</string>
    <string name="stage_3">Babak 3</string>
    <string name="faucet7">Keran 7</string>
    <string name="faucet8">Keran 8</string>
    <string name="faucet9">Keran 9</string>
    <string name="faucet10">Keran 10</string>
    <string name="faucet11">Keran 11</string>
    <string name="faucet12">Keran 12</string>
    <string name="score">Poin:</string>
    <string name="score_value">0</string>
    <string name="time_left">Sisa Waktu:</string>
    <string name="time_left_value">30</string>
    <string name="exit_dialog_title">Keluar Permainan</string>
    <string name="exit_dialog_message">Apakah kamu yakin ingin mengakhiri permainan?\nKemajuanmu sekarang tidak akan disimpan</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="finish">Selesai</string>
    <string name="final_score">Poinmu yang terkumpul adalah:</string>
    <string name="zero">0</string>
    <string name="back_to_home">Kembali ke Menu Utama</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="tentang_field">Nama Aplikasi:\nWudhu Yuk\n\nVersi Aplikasi:\n1.0.0\n\nTanggal Rilis:\n27 September 2024\n\nTim Pengembang:\nRahma Bintang Pratama\nRiana Saferina Firdaus\nMirna Wati Maswain\nMauliya Azizatun Ni’mah</string>
    <string name="slogan">Sempurnakan wudhu, sempurnakan ibadah!</string>
    <string name="unsupported_android_dialog_message">Aplikasi ini hanya mendukung Android 9 (Pie) dan diatasnya\nAplikasi akan tertutup otomatis dalam 5 detik</string>
    <string name="unsupported_android_dialog_title">Versi Android tidak didukung</string>
    <string name="keutamaan_wudhu">Keutamaan Wudhu</string>
    <string name="keutamaan_wudhu_field">1. Allah SWT mencintai orang-orang yang bersih\n2. Sesungguhnya gurrah dan tahjil (cahaya akibat wudhu yang nampak pada wajah, kaki dan tangan) merupakan alamat atau tanda khusus bagi umat Nabi Muhammad SAW pada hari kiamat kelak\n3. Wudhu dapat menghapuskan dosa-dosa dan kesalahan-kesalahan\n4. Wudhu mampu mengangkat derajat seseorang</string>
</resources>