<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beauBlue"
    tools:context=".ui.learn.LearnActivity">

    <ImageView
        android:id="@+id/ivSun"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="-80dp"
        android:layout_marginEnd="-80dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/sun"
        android:contentDescription="@string/sun"
        android:alpha="1" />

    <ImageView
        android:id="@+id/ivCloud1"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/cloud_1"
        android:contentDescription="@string/cloud_1"
        android:alpha="1" />

    <ImageView
        android:id="@+id/ivCloud2"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintTop_toBottomOf="@id/ivCloud1"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/cloud_2"
        android:contentDescription="@string/cloud_2"
        android:alpha="0.75" />

    <ImageView
        android:id="@+id/ivCloud3"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintTop_toBottomOf="@id/ivCloud2"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/cloud_3"
        android:contentDescription="@string/cloud_3"
        android:alpha="0.5" />

    <ImageView
        android:id="@+id/ivCloud4"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintTop_toBottomOf="@id/ivCloud3"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/cloud_4"
        android:contentDescription="@string/cloud_4"
        android:alpha="0.25" />

    <ImageView
        android:id="@+id/ivGround"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ground"
        android:contentDescription="@string/ground"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:alpha="1" />

    <ImageView
        android:id="@+id/ivKeutamaanWudhu"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:alpha="1"
        android:contentDescription="@string/keutamaan_wudhu"
        android:src="@drawable/keutamaan_wudhu"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toStartOf="@id/ivDaftarPustaka"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivDoaWudhu" />

    <ImageView
        android:id="@+id/ivDaftarPustaka"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:alpha="1"
        android:contentDescription="@string/references"
        android:src="@drawable/daftar_pustaka"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivKeutamaanWudhu"
        app:layout_constraintTop_toBottomOf="@id/ivBatalWudhu" />

    <ImageView
        android:id="@+id/ivDoaWudhu"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:alpha="1"
        android:contentDescription="@string/doa_wudhu"
        android:src="@drawable/doa_wudhu"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivBatalWudhu"
        app:layout_constraintTop_toBottomOf="@id/ivNiatWudhu" />

    <ImageView
        android:id="@+id/ivBatalWudhu"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:alpha="1"
        android:contentDescription="@string/batal_wudhu"
        android:src="@drawable/batal_wudhu"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivDoaWudhu"
        app:layout_constraintTop_toBottomOf="@id/ivTataCaraWudhu" />

    <ImageView
        android:id="@+id/ivNiatWudhu"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:alpha="1"
        android:contentDescription="@string/niat_wudhu"
        android:src="@drawable/niat_wudhu"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivTataCaraWudhu"
        app:layout_constraintTop_toBottomOf="@id/ivSunnahWudhu" />

    <ImageView
        android:id="@+id/ivTataCaraWudhu"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:alpha="1"
        android:contentDescription="@string/tata_cara_wudhu"
        android:src="@drawable/tata_cara_wudhu"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivNiatWudhu"
        app:layout_constraintTop_toBottomOf="@id/ivSyaratWudhu" />

    <ImageView
        android:id="@+id/ivSunnahWudhu"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:alpha="1"
        android:contentDescription="@string/sunnah_wudhu"
        android:src="@drawable/sunnah_wudhu"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivSyaratWudhu"
        app:layout_constraintTop_toBottomOf="@id/ivPengertianWudhu" />

    <ImageView
        android:id="@+id/ivSyaratWudhu"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:alpha="1"
        android:contentDescription="@string/syarat_wudhu"
        android:src="@drawable/syarat_wudhu"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivSunnahWudhu"
        app:layout_constraintTop_toBottomOf="@id/ivRukunWudhu" />

    <ImageView
        android:id="@+id/ivPengertianWudhu"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:alpha="1"
        android:contentDescription="@string/pengertian_wudhu"
        android:src="@drawable/pengertian_wudhu"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toStartOf="@id/ivRukunWudhu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivWood" />

    <ImageView
        android:id="@+id/ivRukunWudhu"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginTop="-8dp"
        android:alpha="1"
        android:contentDescription="@string/rukun_wudhu"
        android:src="@drawable/rukun_wudhu"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/ivPengertianWudhu"
        app:layout_constraintTop_toBottomOf="@id/ivWood" />

    <ImageView
        android:id="@+id/ivWood"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="-16dp"
        android:layout_marginEnd="-16dp"
        android:alpha="1"
        android:contentDescription="@string/wood_horizontal"
        android:src="@drawable/wood_horizontal"
        app:layout_constraintDimensionRatio="H,11:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivCloud1" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="130dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintTop_toBottomOf="@id/ivDaftarPustaka"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/ic_back"
        android:contentDescription="@string/back"
        android:alpha="1" />

</androidx.constraintlayout.widget.ConstraintLayout>