<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beauBlue"
    tools:context=".ui.result.ResultActivity">

    <ImageView
        android:id="@+id/ivSun"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="-80dp"
        android:layout_marginEnd="-80dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/sun"
        android:contentDescription="@string/sun"
        android:alpha="1" />

    <ImageView
        android:id="@+id/ivCloud1"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/cloud_1"
        android:contentDescription="@string/cloud_1"
        android:alpha="1" />

    <ImageView
        android:id="@+id/ivCloud2"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintTop_toBottomOf="@id/ivCloud1"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/cloud_2"
        android:contentDescription="@string/cloud_2"
        android:alpha="0.75" />

    <ImageView
        android:id="@+id/ivCloud3"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintTop_toBottomOf="@id/ivCloud2"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/cloud_3"
        android:contentDescription="@string/cloud_3"
        android:alpha="0.5" />

    <ImageView
        android:id="@+id/ivCloud4"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintTop_toBottomOf="@id/ivCloud3"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/cloud_4"
        android:contentDescription="@string/cloud_4"
        android:alpha="0.25" />

    <ImageView
        android:id="@+id/ivGround"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ground"
        android:contentDescription="@string/ground"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:alpha="1" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivFaucet"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_open_faucet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/tvFinalScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/ivFaucet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/roseEbony"
        android:textAlignment="center"
        android:fontFamily="@font/pacifico_regular"
        android:text="@string/final_score" />

    <TextView
        android:id="@+id/tvFinalScoreValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvFinalScore"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/roseEbony"
        android:textAlignment="center"
        android:fontFamily="@font/pacifico_regular"
        android:text="@string/zero" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="@color/roseEbony"
        android:fontFamily="@font/josefin_sans_regular"
        android:text="@string/back_to_home"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFinalScoreValue" />
</androidx.constraintlayout.widget.ConstraintLayout>