<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beauBlue"
    tools:context=".ui.niat.NiatActivity">

    <ImageView
        android:id="@+id/ivSun"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="-80dp"
        android:layout_marginEnd="-80dp"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/sun"
        android:contentDescription="@string/sun"
        android:alpha="1" />

    <ImageView
        android:id="@+id/ivCloud1"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/cloud_1"
        android:contentDescription="@string/cloud_1"
        android:alpha="1" />

    <ImageView
        android:id="@+id/ivCloud2"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintTop_toBottomOf="@id/ivCloud1"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/cloud_2"
        android:contentDescription="@string/cloud_2"
        android:alpha="0.75" />

    <ImageView
        android:id="@+id/ivCloud3"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintTop_toBottomOf="@id/ivCloud2"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/cloud_3"
        android:contentDescription="@string/cloud_3"
        android:alpha="0.5" />

    <ImageView
        android:id="@+id/ivCloud4"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintTop_toBottomOf="@id/ivCloud3"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/cloud_4"
        android:contentDescription="@string/cloud_4"
        android:alpha="0.25" />

    <ImageView
        android:id="@+id/ivGround"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ground"
        android:contentDescription="@string/ground"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:alpha="1" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ivGround"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivSun">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_background">

            <TextView
                android:id="@+id/tvNiatWudhu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:fontFamily="@font/pacifico_regular"
                android:text="@string/niat_wudhu"
                android:textAlignment="center"
                android:textColor="@color/roseEbony"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvNiatWudhuField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/josefin_sans_regular"
                android:text="@string/niat_wudhu_field"
                android:textColor="@color/roseEbony"
                android:textSize="20sp"
                android:justificationMode="inter_word"
                app:layout_constraintBottom_toTopOf="@id/btnPlay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNiatWudhu" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/roseEbony"
                android:fontFamily="@font/josefin_sans_regular"
                android:text="@string/play"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNiatWudhuField" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>